Fixed overflow-y on login page to scroll

--- a/css/log-in.css
+++ b/css/log-in.css
@@ -109,6 +109,10 @@
     margin-bottom: 20px;
 }
 
+#login-form {
+    overflow-y: scroll;
+}
+
 #login-form > p {
     font-weight: bold;
     color: #333333;
@@ -116,7 +120,7 @@
 }
 
 .imgcontainer {
-    margin: 0px 0px 20px;
+    margin: 20px 0px 20px;
 }
 
 .creds-container label {
